--- a/bevim_project/bevim/templates/show_charts.html
+++ b/bevim_project/bevim/templates/show_charts.html
@@ -4,11 +4,12 @@
 {% load bootstrap_ui_tags %}
 {% load new_tags %}
 
-<h2>{% trans 'Experiment Chart' %}</h2>
+<h2>{% trans 'Experiment Chart of Sensor ' %}{{active_sensor}}</h2>
 <div id={{chart_id}}></div>
 {% if jobs_quantity > 1 %}
-    {% for i in jobs_quantity|repeat_until %}
-        <h3> {% trans 'Job Chart' %} {{ i|sum_unity }}</h3>
-        <div id={{chart_id}}_{{i}}></div>
+    {% for j in jobs_quantity|repeat_until %}
+        <h3> {% trans 'Job Chart' %} {{ j|sum_unity }}</h3>
+        <div id={{chart_id}}_{{j}}></div>
     {% endfor %}
+  
 {% endif %}
