Adding about and How to use

--- a/bevim_project/bevim/templates/about.html
+++ b/bevim_project/bevim/templates/about.html
@@ -45,7 +45,7 @@ O projeto foi realizado na disciplina de Projeto Integrador II com o intuito de 
 <br><br><br><br><br><br><br><br><br><br><br><br><br>
   <div class="col-xs-6 col-md-3">
   <center><img src="{% static "images/douglas.jpg" %}" alt="team_member"/>
-  <br><b>Dougllas Magalhães</b><br>
+  <br><b>Douglas Magalhães</b><br>
   Engenharia Aeroespacial
   </center>
 </div>
