--- a/bevim_project/bevim/templates/result.html
+++ b/bevim_project/bevim/templates/result.html
@@ -21,12 +21,8 @@
     {{amplitudes_chart_data}}
 </div>
 
-<div id="frequencies_real_chart_data" style="display: none;">
-    {{frequencies_chart_real_data}}
-</div>
-
-<div id="frequencies_ideal_chart_data" style="display: none;">
-    {{frequencies_chart_ideal_data}}
+<div id="frequencies_chart_data" style="display: none;">
+    {{frequencies_chart_data}}
 </div>
 
 <div id="speeds_chart_data" style="display: none;">
@@ -55,16 +51,13 @@
 <ul class="nav nav-tabs">
   <li class="active"><a href="#frequency" data-toggle="tab" aria-expanded="true">{% trans 'Frequency x Time' %}</a></li>
   <li class=""><a href="#acceleration" data-toggle="tab" aria-expanded="false">{% trans 'Acceleration x Time' %}</a></li>
-  <li class=""><a href="#amplitude" data-toggle="tab" aria-expanded="false">{% trans 'Amplitude x Time' %}</a></li>
   <li class=""><a href="#speed" data-toggle="tab" aria-expanded="false">{% trans 'Speed x Time' %}</a></li>
+  <li class=""><a href="#amplitude" data-toggle="tab" aria-expanded="false">{% trans 'Amplitude x Time' %}</a></li>
 
 </ul>
 <div id="tabs-content" class="tab-content">
     <div class="tab-pane fade active in" id="frequency">
-      <h3> Ideal Chart </h3>
-      <div id="frequency_ideal_chart"></div>
-      <h3> Real Chart </h3>
-      <div id="frequency_real_chart"></div>
+      <div id="frequency_chart"></div>
     </div>
     <div class="tab-pane fade" id="acceleration">
        {% include "show_charts.html" with jobs_quantity=jobs_quantity  chart_id="acceleration_chart" active_sensor=active_sensor%}
@@ -88,11 +81,8 @@
       var accelerations_data = $("#accelerations_chart_data").html();
       accelerations_data = JSON.parse(accelerations_data);
 
-      var frequencies_ideal_data = $("#frequencies_ideal_chart_data").html();
-      frequencies_ideal_data = JSON.parse(frequencies_ideal_data);
-
-      var frequencies_real_data = $("#frequencies_real_chart_data").html();
-      frequencies_real_data = JSON.parse(frequencies_real_data);
+      var frequencies_data = $("#frequencies_chart_data").html();
+      frequencies_data = JSON.parse(frequencies_data);
 
       var amplitudes_data = $("#amplitudes_chart_data").html();
       amplitudes_data = JSON.parse(amplitudes_data);
@@ -103,8 +93,7 @@
       showCharts(accelerations_data, '#acceleration_chart');
       showCharts(amplitudes_data, '#amplitude_chart');
       showCharts(speeds_data, '#speed_chart');
-      showCharts(frequencies_ideal_data, '#frequency_ideal_chart');
-      showCharts(frequencies_real_data, '#frequency_real_chart');
+      showCharts(frequencies_data, '#frequency_chart');
 
     });
 
@@ -134,7 +123,6 @@
         };
         for (i=0;i < jobsQuantity;i++){
             chartsData['columns'] = jobsData[i];
-            console.log(chartsData);
             jobChart = c3.generate({
               bindto: bindTo + "_" + i,
               data: chartsData
